fix header offset on smaller devices

--- a/src/shared/sass/_homepage.scss
+++ b/src/shared/sass/_homepage.scss
@@ -18,7 +18,7 @@
   padding: 0 60px;
   position: relative;
   background-position: 0 -60px;
-  margin-top: 60px;
+  margin-top: $header-height-small;
 
   @include vendor( background-clip, text );
   @include vendor( text-fill-color, transparent );
