--- a/src/shared/sass/_layout.scss
+++ b/src/shared/sass/_layout.scss
@@ -3,6 +3,6 @@
 //===============================================================================
 .wrap{
   width: 100%;
-  margin: $header-height-large auto 0;
+  margin: $header-height-small auto 0;
   padding-bottom: $footer-height;
 }
